[tool.poetry]
name = "pandas3d"
version = "0.1.0"
description = ""
authors = ["eycjur"]

[tool.poetry.dependencies]
python = "3.7.12"
numpy = "1.21.5"
pandas = "1.3.5"
matplotlib = "3.2.2"
japanize-matplotlib = "^1.1.3"
click = "7.1.2"
typer = "0.4.0"
pyyml = "0.0.2"
tqdm = "4.63.0"

[tool.poetry.extras]
extra = []

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "21.11b0"
mypy = "^0.931"
pytest = "^7.0.1"
lxml = "^4.7.1"
notebook = "^6.4.8"
jupyterlab = "^3.2.9"
jupytext = "^1.13.7"
line-profiler = "^3.4.0"
Sphinx = "^4.3.2"
sphinx-click = "^3.1.0"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.17.0"
types-PyYAML = "^6.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.jupytext]
formats = "notebook//ipynb,notebook//py:percent"

[tool.black]
exclude = '''
/(
      \..*_cache
    | \.venv
    | __pycache__
    | docs
    | notebook
    | old
)/
'''
