[tool.poetry]
name = "pandas3d"
version = "1.0.0"
description = ""
authors = ["eycjur"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.22.2"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
tqdm = "^4.62.3"
setuptools-scm = "^6.4.2"

[tool.poetry.extras]
extra = []

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.1.0"
mypy = "^0.931"
pytest = "^7.0.1"
lxml = "^4.7.1"
notebook = "^6.4.8"
jupyterlab = "^3.2.9"
line-profiler = "^3.4.0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.17.0"
types-PyYAML = "^6.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
      \..*_cache
    | \.venv
    | __pycache__
    | docs
    | notebook
    | old
)/
'''
